feat: add help text

--- a/src/saved-pfp.module.css
+++ b/src/saved-pfp.module.css
@@ -43,3 +43,19 @@
   background: none;
   font-weight: inherit;
 }
+
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 1rem;
+  text-align: center;
+}
+
+.info p {
+  margin: 0;
+}
+
+.info a {
+  font-weight: bold;
+}
